# fullstack-rust

server/: Cargo.toml
server/src/: lib.rs  main.rs
server/src/routes/: user.rs
