[package]
authors = ["FilipGal <filipgal@live.se>"]
edition = "2018"
name = "fullstack_rust"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.7"
rocket_contrib = {version = "0.4.7", features = ["helmet"]}
serde = {version = "1.0.124", features = ["derive"]}